# backend/routes/routes.go
@@ -15,7 +15,8 @@ func RegisterOrganizationRoutes(r *gin.RouterGroup) {
 	organizationRoutes := r.Group("/organizations")
 	{
 		organizationRoutes.Use(middlewares.AuthMiddleware(), middlewares.AdminOnly())
-		organizationRoutes.GET("users", controllers.GetOrganizationsUsers)
+		organizationRoutes.GET("/users", controllers.GetOrganizationsUsers)
+		organizationRoutes.GET("/pending", controllers.GetOrganizationsUsersPending)
 		organizationRoutes.GET("/subscription-info", controllers.GetOrganizationSubscriptionInfo)
 	}
 
@@ -47,18 +48,21 @@ func RegisterProductRoutes(r *gin.RouterGroup) {
 	r.GET("/products", controllers.ListProductsWithPrices)
 }
 func RegisterSubscriptionRoutes(r *gin.RouterGroup) {
+
 	subscriptionRoutes := r.Group("/subscriptions")
 	{
+		subscriptionRoutes.Use(middlewares.AuthMiddleware(), middlewares.AdminOnly())
 		subscriptionRoutes.POST("", controllers.CreateSubscription)
 		subscriptionRoutes.GET("", controllers.GetSubscriptions)
 		subscriptionRoutes.POST("/prorated-cost", controllers.GetProratedCost)
 		subscriptionRoutes.POST("/send-invite", controllers.SendInvite)
-		subscriptionRoutes.POST("/accept-invite", controllers.AcceptInvite)
 		subscriptionRoutes.POST("/disable-user", controllers.DisableUser)
 	}
 
 }
 func RegisterAuthRoutes(r *gin.RouterGroup) {
+	r.POST("subscription/accept-invite", controllers.AcceptInvite)
+
 	r.POST("/invite", controllers.InviteUser)
 	r.GET("/verify-magic-link", controllers.VerifyMagicLink)
 	r.POST("/singup", controllers.InviteUser)
